.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

trunk
-----

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

- trivial tweaks and cleanups.

June 11, 2018 Kevin Meagher
---------------------------
Release V01-01-02

- Use the correct path for GCD file if `base_path` is provided

November 30, 2017 Kevin Meagher
-------------------------------
Release V01-01-01

- Use new dataio for tests
- Clean up docs
- Script cleanup: remove `Finish()` and `TrashCan`

Mar 23, 2017 EKB (blaufuss@umd.edu)
-----------------------------------

Release V01-01-00

- Use new serialization lib instead of boost
- Python 3 happiness
- Performance improvements
- Remove private copies of headers in favor of serialization std ones

- Inline compression of multiple GCD frames within a
  single file.

  -- David Schultz

- Lots of pybindings used for debugging the previous bug.
  Inspecting diff objects from python is now much improved.

  -- David Schultz

November 24, 2015 David Schultz (david.schultz@icecube.wisc.edu)
----------------------------------------------------------------

Release V01-00-02

- Fix a bug with maps (affects I3DOMCalibrationMapDiff)

  -- David Schultz

April 18, 2015 Meike de With (meike.de.with@desy.de)
-------------------------------------------------------
Release V01-00-01

- Minor code fix so test can run

  -- Don la Dieu


April 3, 2015 Claudio Kopper (ckopper@icecube.wisc.edu)
-------------------------------------------------------
Release V01-00-00

- Initial release as v1.0

  -- Claudio Kopper